<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="profile">Profile</string>
    <string name="student_data">Student Data</string>
    <string name="name">Name</string>
    <string name="nim">NIM</string>
    <string name="icon_info_desc">Icon info</string>
    <string name="icon_change_password_desc">Icon Change Password</string>
    <string name="change_password">Change Password</string>
    <string name="log_out">Log out</string>
    <string name="log_out_dialog_message">Are you sure want to log out?</string>
    <string name="log_out_dialog_negative_text">Cancel</string>
    <string name="change_photo_profile_button_desc">Change photo profile button</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
</resources>