<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/white">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar_profile"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="72dp"
        style="@style/BaseCardView"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingTop="72dp"
            android:paddingBottom="16dp"
            android:background="@color/white">

            <ImageView
                android:id="@+id/icInfo"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/icon_info_desc" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/student_data"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@+id/icInfo"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/name"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/icInfo" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_text_view"
                android:ellipsize="end"
                android:fontFamily="@font/poppins_regular"
                android:lines="1"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:text="Muammar Ahlan Abimanyu" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/nim"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvName" />

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_text_view"
                android:ellipsize="end"
                android:fontFamily="@font/poppins_regular"
                android:lines="1"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:text="H071191032" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView"
        android:layout_width="112dp"
        android:layout_height="112dp"
        android:layout_marginTop="16dp"
        android:elevation="2dp"
        android:src="@drawable/dummy_photo_profile"
        app:layout_constraintEnd_toEndOf="@+id/materialCardView"
        app:layout_constraintStart_toStartOf="@+id/materialCardView"
        app:layout_constraintTop_toBottomOf="@+id/include"
        app:shapeAppearanceOverlay="@style/CircleImageView"
        app:strokeColor="@color/white_light_gray"
        app:strokeWidth="1dp" />

    <ImageView
        android:id="@+id/btnChangePhotoProfile"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:elevation="2dp"
        android:padding="8dp"
        android:src="@drawable/ic_photo_camera"
        android:background="@drawable/bg_red_circle"
        app:layout_constraintBottom_toBottomOf="@+id/shapeableImageView"
        app:layout_constraintEnd_toEndOf="@+id/shapeableImageView"
        android:contentDescription="@string/change_photo_profile_button_desc" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView2"
        style="@style/BaseCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView"
        tools:layout_editor_absoluteX="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:contentDescription="@string/icon_change_password_desc"
                android:src="@drawable/ic_vpn_key"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/change_password"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btnLogout"
        style="@style/BaseCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView2"
        tools:layout_editor_absoluteX="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:contentDescription="@string/icon_change_password_desc"
                android:src="@drawable/ic_logout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/log_out"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>